--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
-@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 body {
   background-color: rgb(133, 133, 133);
+  font-family: "Montserrat", "Roboto", "Open Sans", sans-serif;
 }
 
 div {
@@ -10,13 +11,13 @@ div {
 }
 
 .App {
-  font-family: "Roboto", "Open Sans", sans-serif;
   background-color: #fff;
   padding: 1rem;
+  padding-bottom: 100px;
   flex-direction: column;
   min-height: 100vh;
   max-height: 100vh;
   width: 100vw;
   max-width: 100vw;
-  font-size: 200%;
+  font-size: 150%;
 }
