--- a/src/pages/ModeratorPage.scss
+++ b/src/pages/ModeratorPage.scss
@@ -39,7 +39,8 @@
       justify-content: space-between;
 
       .btn {
-        min-width: 3em;
+        padding: 2em 1.5em;
+        min-width: 5em;
       }
 
       input {
