--- a/src/pages/ModeratorPage.scss
+++ b/src/pages/ModeratorPage.scss
@@ -13,6 +13,15 @@
   flex-grow: 1;
 }
 
+.slideButtons {
+  flex-direction: row;
+  justify-content: space-between;
+
+  .btn {
+    padding: 1em 1.5em;
+  }
+}
+
 .players {
   flex-direction: column;
 
